--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "@apollo/react-ssr": "^4.0.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
+    "autoprefixer": "^10.2.6",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "^11.0.0",
+    "postcss": "^8.3.4",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwindcss": "^2.1.4"
   }
 }
